[gd_scene load_steps=29 format=3 uid="uid://krr73fxy21jk"]

[ext_resource type="Material" uid="uid://jmg777e2qs1y" path="res://Map/ERZ.tres" id="1_6u63l"]
[ext_resource type="Script" uid="uid://bphistmkb7dr7" path="res://Skybox.gd" id="2_25umq"]
[ext_resource type="Script" uid="uid://wfgwgnx582cd" path="res://Player/Player.gd" id="3_8nqp6"]
[ext_resource type="Texture2D" uid="uid://bfgdhknn2yv0r" path="res://Player/SuperHue.png" id="4_6u63l"]
[ext_resource type="MeshLibrary" uid="uid://bqs88f5rmtssy" path="res://ERZTileset.tres" id="5_6u63l"]
[ext_resource type="Script" uid="uid://cwfgselu61keu" path="res://Map.gd" id="6_pemhq"]
[ext_resource type="PackedScene" uid="uid://b7757xtardl4g" path="res://UFO/UFOHolder.tscn" id="7_7c5wk"]
[ext_resource type="AudioStream" uid="uid://b5v6g1qrdw744" path="res://SoundFX/EggReverie.ogg" id="8_6u63l"]
[ext_resource type="AudioStream" uid="uid://bejhpolnhwfe2" path="res://SoundFX/Jump.wav" id="11_qmb6t"]
[ext_resource type="AudioStream" uid="uid://dkqmn7e08g2xo" path="res://SoundFX/ElecPulse.wav" id="12_25umq"]
[ext_resource type="AudioStream" uid="uid://t3lqxg8ixwq5" path="res://SoundFX/Spring.wav" id="12_ypc2k"]
[ext_resource type="AudioStream" uid="uid://dbxgn77vpfvau" path="res://SoundFX/HyperRing.wav" id="13_25umq"]
[ext_resource type="AudioStream" uid="uid://mu3pcvuyc0xk" path="res://SoundFX/PeelRelease.wav" id="14_8nqp6"]
[ext_resource type="AudioStream" uid="uid://dgx4lljei1kax" path="res://SoundFX/Destroy.wav" id="14_e0uja"]
[ext_resource type="AudioStream" uid="uid://b15gmi6er7514" path="res://SoundFX/BoostPad.wav" id="15_53adt"]
[ext_resource type="Texture2D" uid="uid://bxlbgedekddhf" path="res://Map/ERZ/ERZCrystal1.png" id="16_c8v8o"]
[ext_resource type="AudioStream" uid="uid://c7xgk72qntx4h" path="res://SoundFX/TimeStone.wav" id="16_oetwe"]
[ext_resource type="AudioStream" uid="uid://crmfa5uvnq4fa" path="res://SoundFX/UFORespawn.wav" id="17_nvalg"]
[ext_resource type="Script" uid="uid://bd1yl3taf0x1v" path="res://Map/Flash.gd" id="19_8nqp6"]

[sub_resource type="SphereMesh" id="SphereMesh_c8v8o"]
material = ExtResource("1_6u63l")
radius = 1024.0
height = 2048.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_a814b"]

[sub_resource type="CylinderMesh" id="CylinderMesh_yvb8b"]

[sub_resource type="Animation" id="Animation_j0mp3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_c8v8o"]
resource_name = "SuperHue"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_25umq"]
_data = {
&"RESET": SubResource("Animation_j0mp3"),
&"SuperHue": SubResource("Animation_c8v8o")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8s4c3"]
radius = 1.5
height = 4.0

[sub_resource type="BoxShape3D" id="BoxShape3D_mctxq"]
size = Vector3(3, 2, 3)

[sub_resource type="Environment" id="Environment_rpqi1"]
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)

[node name="Node3D" type="Node3D"]

[node name="Skybox" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 0)
mesh = SubResource("SphereMesh_c8v8o")
skeleton = NodePath("../Player")
script = ExtResource("2_25umq")

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_mask = 3
script = ExtResource("3_8nqp6")
accel = 24.0
top_speed_ground = 24.0
top_speed_air = 8.0
jump_force = 12.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_a814b")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
mesh = SubResource("CylinderMesh_yvb8b")

[node name="Head" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, 0)

[node name="Camera3D" type="Camera3D" parent="Player/Head"]
fov = 80.0

[node name="Sprite3D" type="Sprite3D" parent="Player/Head/Camera3D"]
transform = Transform3D(0.337433, 0.0433481, -0.0822171, 0, 0.309603, 0.163235, 0.0929446, -0.157374, 0.298487, 1.00408, -0.508054, -1.18129)
pixel_size = 0.075
texture_filter = 0
texture = ExtResource("4_6u63l")
hframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player/Head/Camera3D/Sprite3D"]
libraries = {
&"": SubResource("AnimationLibrary_25umq")
}
autoplay = "SuperHue"

[node name="Point" type="Sprite3D" parent="Player/Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("5_6u63l")
cell_size = Vector3(3, 3, 3)
cell_center_y = false
data = {
"cells": PackedInt32Array(65535, 0, 1441803, 0, 0, 1441803, 0, 65535, 1441803, 65535, 65535, 1441803, 65535, 65534, 1441803, 0, 65534, 1441803, 1, 65534, 1441803, 1, 65535, 1441803, 1, 0, 1441803, 1, 1, 1441803, 0, 1, 1441803, 65535, 1, 1441803, 65534, 1, 1441803, 65534, 0, 1441803, 65534, 65535, 1441803, 65534, 65534, 1441803, 65534, 65533, 1441803, 65535, 65533, 1441803, 0, 65533, 1441803, 1, 65533, 1441803, 2, 65533, 1441797, 2, 65535, 1441797, 2, 65534, 1441797, 2, 0, 1441797, 2, 1, 1441797, 2, 2, 655367, 1, 2, 655365, 65535, 2, 655365, 0, 2, 655365, 65534, 2, 655365, 65533, 2, 655365, 65533, 1, 1441803, 65533, 0, 1441803, 65533, 65535, 1441803, 65533, 65534, 1441803, 65533, 65533, 6, 65534, 65532, 655372, 1, 65532, 655372, 3, 65534, 655361, 3, 1, 655361, 1, 3, 27, 65534, 3, 27, 65532, 65534, 1441804, 65532, 1, 1441804, 65532, 65533, 5, 65533, 65532, 1048581, 65532, 2, 655365, 65533, 3, 27, 2, 3, 27, 3, 2, 655361, 3, 65533, 655361, 2, 65532, 1441797, 3, 65532, 655361, 3, 3, 27, 65532, 65532, 1441817, 65532, 3, 27, 0, 65532, 655372, 65535, 65532, 655372, 3, 65535, 655361, 3, 0, 655361, 0, 3, 27, 65535, 3, 27, 65532, 65535, 1441804, 65532, 0, 1441804, 65520, 65520, 1441817, 65521, 65520, 655388, 65522, 65520, 655387, 65523, 65520, 655387, 65524, 65520, 655387, 65525, 65520, 655387, 65526, 65520, 655386, 65527, 65520, 1441817, 65528, 65520, 1441794, 65531, 65520, 1048578, 65532, 65520, 1441817, 65533, 65520, 655388, 65534, 65520, 655387, 65535, 65520, 655387, 0, 65520, 655387, 1, 65520, 655387, 2, 65520, 655387, 3, 65520, 655387, 4, 65520, 655387, 5, 65520, 655387, 6, 65520, 655387, 7, 65520, 655387, 8, 65520, 655387, 9, 65520, 655387, 10, 65520, 655387, 11, 65520, 655387, 12, 65520, 655387, 13, 65520, 655387, 14, 65520, 655386, 15, 65520, 1441817, 15, 65521, 1048601, 15, 65522, 1441817, 15, 65523, 1048601, 15, 65524, 1441817, 15, 65525, 1048601, 15, 65526, 1441817, 15, 65527, 1048601, 15, 65528, 1441817, 15, 65529, 1048601, 15, 65530, 1441817, 15, 65531, 1048601, 15, 65532, 1441817, 15, 65533, 1048601, 15, 65534, 1441817, 15, 65535, 1048601, 15, 0, 1441817, 15, 1, 1048601, 15, 2, 1441817, 15, 3, 1048601, 15, 8, 1048577, 15, 9, 1048577, 15, 10, 1048577, 15, 11, 1048577, 15, 12, 1048577, 15, 13, 1048577, 15, 14, 1048577, 15, 15, 1441817, 14, 15, 28, 13, 15, 27, 12, 15, 27, 11, 15, 27, 10, 15, 27, 9, 15, 27, 8, 15, 27, 7, 15, 27, 6, 15, 27, 5, 15, 27, 4, 15, 27, 3, 15, 27, 2, 15, 27, 1, 15, 27, 0, 15, 27, 65535, 15, 27, 65534, 15, 27, 65533, 15, 27, 65532, 15, 27, 65531, 15, 27, 65530, 15, 27, 65529, 15, 27, 65528, 15, 27, 65527, 15, 27, 65526, 15, 27, 65525, 15, 27, 65524, 15, 27, 65523, 15, 27, 65522, 15, 27, 65521, 15, 26, 65520, 15, 1441817, 65520, 14, 1441820, 65520, 13, 1441819, 65520, 12, 1441819, 65520, 11, 1441819, 65520, 10, 1441819, 65520, 9, 1441819, 65520, 8, 1441819, 65520, 7, 1441819, 65520, 6, 1441819, 65520, 5, 1441819, 65520, 4, 1441819, 65520, 3, 1441819, 65520, 2, 1441819, 65520, 1, 1441819, 65520, 0, 1441819, 65520, 65535, 1441819, 65520, 65534, 1441819, 65520, 65533, 1441819, 65520, 65532, 1441819, 65520, 65531, 1441819, 65520, 65530, 1441819, 65520, 65529, 1441819, 65520, 65528, 1441819, 65520, 65527, 1441819, 65520, 65526, 1441819, 65520, 65525, 1441819, 65520, 65524, 1441819, 65520, 65523, 1441819, 65520, 65522, 1441819, 65520, 65521, 1441818, 65529, 9, 5, 65529, 10, 1441809, 65529, 11, 1441809, 65529, 12, 1441809, 65530, 8, 655387, 65530, 9, 5, 65530, 10, 1441809, 65530, 11, 1441809, 65530, 12, 1441809, 65531, 4, 655362, 65531, 8, 655387, 65531, 9, 5, 65531, 10, 1441809, 65531, 11, 1441809, 65531, 12, 1441809, 65532, 4, 655362, 65532, 8, 655387, 65532, 9, 5, 65532, 10, 1441809, 65532, 11, 1441809, 65532, 12, 1441809, 65533, 4, 655362, 65533, 8, 655387, 65533, 9, 5, 65533, 10, 1441809, 65533, 11, 1441809, 65533, 12, 1441809, 65534, 4, 655362, 65534, 8, 655387, 65534, 9, 5, 65534, 10, 1441809, 65534, 11, 1441809, 65534, 12, 1441809, 65535, 4, 655362, 65535, 8, 655387, 65535, 9, 5, 65535, 10, 1441809, 65535, 11, 1441809, 65535, 12, 1441809, 0, 8, 655387, 0, 9, 5, 0, 10, 1441809, 0, 11, 1441809, 0, 12, 1441809, 1, 8, 655387, 1, 9, 5, 1, 10, 1441809, 1, 11, 1441809, 1, 12, 1441809, 2, 8, 655387, 2, 9, 5, 2, 10, 1441809, 2, 11, 1441809, 2, 12, 1441809, 3, 8, 655387, 3, 9, 5, 3, 10, 1441809, 3, 11, 1441809, 3, 12, 1441809, 4, 8, 655387, 4, 9, 5, 4, 10, 1441809, 4, 11, 1441809, 4, 12, 1441809, 5, 8, 655387, 5, 9, 5, 5, 10, 1441808, 5, 11, 1441810, 5, 12, 1441810, 5, 65527, 655361, 5, 65528, 2, 5, 65532, 655362, 5, 65533, 655361, 5, 65534, 655361, 5, 65535, 655361, 5, 0, 655361, 5, 1, 655361, 5, 2, 655361, 5, 13, 1441808, 5, 14, 655365, 6, 65527, 655361, 6, 65528, 2, 6, 65532, 655362, 6, 65533, 655361, 6, 65534, 655361, 6, 65535, 655361, 6, 0, 655361, 6, 1, 655361, 6, 2, 655361, 6, 3, 27, 6, 8, 655387, 6, 9, 5, 6, 10, 1441803, 6, 11, 1441803, 6, 12, 1441803, 6, 13, 1441803, 6, 14, 655365, 7, 65527, 655361, 7, 65528, 1441792, 7, 65529, 1441794, 7, 65530, 1441794, 7, 65531, 1441794, 7, 65532, 1441792, 7, 65533, 655361, 7, 65534, 655361, 7, 65535, 655361, 7, 0, 655361, 7, 1, 655361, 7, 2, 655361, 7, 3, 27, 7, 8, 655387, 7, 9, 5, 7, 10, 1441803, 7, 11, 1048580, 7, 12, 1048580, 7, 13, 1441803, 7, 14, 655365, 8, 65527, 655361, 8, 65528, 655361, 8, 65529, 655361, 8, 65530, 655361, 8, 65531, 655361, 8, 65532, 655361, 8, 65533, 655361, 8, 65534, 655361, 8, 65535, 655361, 8, 0, 655361, 8, 1, 655361, 8, 2, 655361, 8, 3, 28, 8, 8, 655386, 8, 9, 5, 8, 10, 1441803, 8, 11, 1441803, 8, 12, 1441803, 8, 13, 1441803, 8, 14, 655365, 9, 65527, 1048581, 9, 65528, 1048581, 9, 65529, 1048581, 9, 65530, 1048581, 9, 65531, 1048581, 9, 65532, 1048581, 9, 65533, 1048581, 9, 65534, 1048581, 9, 65535, 1048581, 9, 0, 1048581, 9, 1, 1048581, 9, 2, 1048583, 9, 3, 1441817, 9, 8, 1441817, 9, 9, 5, 9, 10, 1441804, 9, 11, 1441804, 9, 12, 1441804, 9, 13, 1441804, 9, 14, 655365, 10, 65527, 11, 10, 65528, 11, 10, 65529, 11, 10, 65530, 11, 10, 65531, 11, 10, 65532, 11, 10, 65533, 655372, 10, 65534, 11, 10, 65535, 11, 10, 0, 11, 10, 1, 11, 10, 2, 655365, 10, 3, 1441793, 10, 8, 1048577, 10, 9, 5, 10, 10, 1441803, 10, 11, 1441803, 10, 12, 1441803, 10, 13, 1441803, 10, 14, 655365, 11, 65527, 11, 11, 65528, 655364, 11, 65529, 11, 11, 65530, 11, 11, 65531, 11, 11, 65532, 11, 11, 65533, 655372, 11, 65534, 11, 11, 65535, 11, 11, 0, 11, 11, 1, 11, 11, 2, 655365, 11, 3, 1441793, 11, 8, 1048577, 11, 9, 5, 11, 10, 1441803, 11, 11, 19, 11, 12, 655381, 11, 13, 1441803, 11, 14, 655365, 12, 65527, 11, 12, 65528, 655364, 12, 65529, 11, 12, 65530, 11, 12, 65531, 11, 12, 65532, 11, 12, 65533, 655372, 12, 65534, 11, 12, 65535, 11, 12, 0, 11, 12, 1, 11, 12, 2, 655365, 12, 3, 1441793, 12, 8, 1048577, 12, 9, 5, 12, 10, 1441803, 12, 11, 21, 12, 12, 655379, 12, 13, 1441803, 12, 14, 655365, 65521, 65521, 7, 65521, 65522, 1048581, 65521, 65523, 1048581, 65521, 65524, 1048581, 65521, 65525, 1048581, 65521, 65526, 1048581, 65521, 65527, 1048581, 65521, 65528, 1048581, 65521, 65529, 1048581, 65521, 65530, 1048581, 65521, 65531, 1048581, 65522, 65521, 5, 65522, 65522, 1441803, 65522, 65523, 1441803, 65522, 65524, 1441803, 65522, 65525, 1441803, 65522, 65526, 12, 65522, 65527, 1441803, 65522, 65528, 1441803, 65522, 65529, 1441803, 65522, 65530, 1441807, 65522, 65531, 12, 65523, 65521, 5, 65523, 65522, 1441803, 65523, 65523, 1048597, 65523, 65524, 1048595, 65523, 65525, 1441803, 65523, 65526, 12, 65523, 65527, 1441803, 65523, 65528, 655364, 65523, 65529, 1441803, 65523, 65530, 1441807, 65523, 65531, 1441803, 65524, 65521, 5, 65524, 65522, 1441803, 65524, 65523, 1441811, 65524, 65524, 1441813, 65524, 65525, 1441803, 65524, 65526, 12, 65524, 65527, 1441803, 65524, 65528, 655364, 65524, 65529, 1441803, 65524, 65530, 1441807, 65524, 65531, 1441803, 65525, 65521, 5, 65525, 65522, 1441803, 65525, 65523, 1441803, 65525, 65524, 1441803, 65525, 65525, 1441803, 65525, 65526, 12, 65525, 65527, 1441803, 65525, 65528, 1441803, 65525, 65529, 1441803, 65525, 65530, 1441807, 65525, 65531, 12, 65526, 65521, 1441799, 65526, 65522, 1441797, 65526, 65523, 1441797, 65526, 65524, 1441797, 65526, 65525, 1441797, 65526, 65526, 1441797, 65526, 65527, 1441797, 65526, 65528, 1441797, 65526, 65529, 1441797, 65526, 65530, 1441797, 65526, 65531, 1441797, 65527, 65521, 1048604, 65527, 65522, 1048603, 65527, 65523, 1048603, 65527, 65524, 1048603, 65527, 65525, 1048603, 65527, 65526, 1048603, 65527, 65527, 1048603, 65527, 65528, 1048603, 65527, 65529, 1048603, 65527, 65530, 1048603, 65527, 65531, 1048602, 65528, 65521, 1441794, 65528, 65522, 1441794, 65528, 65523, 1441794, 65528, 65524, 1441794, 65528, 65525, 1441794, 65528, 65526, 1441794, 65528, 65527, 1441794, 65528, 65528, 1441794, 65528, 65529, 1441794, 65528, 65530, 1441794, 65528, 65531, 1441792, 65529, 65531, 2, 65530, 65531, 2, 65531, 65521, 1048578, 65531, 65522, 1048578, 65531, 65523, 1048578, 65531, 65524, 1048578, 65531, 65525, 1048578, 65531, 65526, 1048578, 65531, 65527, 1048578, 65531, 65528, 1048578, 65531, 65529, 1048578, 65531, 65530, 1048578, 65531, 65531, 1441792, 65532, 65521, 1441818, 65532, 65522, 1441819, 65532, 65523, 1441819, 65532, 65524, 1441819, 65532, 65525, 1441819, 65532, 65526, 1441819, 65532, 65527, 1441819, 65532, 65528, 1441819, 65532, 65529, 1441819, 65532, 65530, 1441819, 65532, 65531, 1441820, 65533, 65521, 7, 65533, 65522, 1048581, 65533, 65523, 1048581, 65533, 65524, 1048581, 65533, 65525, 1048581, 65533, 65526, 1048581, 65533, 65527, 1048581, 65533, 65528, 1048581, 65533, 65529, 1048581, 65533, 65530, 1048581, 65533, 65531, 1048581, 65534, 65521, 5, 65534, 65522, 1441803, 65534, 65523, 1441803, 65534, 65524, 1441803, 65534, 65525, 1441803, 65534, 65526, 12, 65534, 65527, 1441803, 65534, 65528, 1441803, 65534, 65529, 1441803, 65534, 65530, 1441803, 65534, 65531, 1048591, 65535, 65521, 5, 65535, 65522, 1441803, 65535, 65523, 1441795, 65535, 65524, 1441795, 65535, 65525, 1441803, 65535, 65526, 12, 65535, 65527, 1441803, 65535, 65528, 1441803, 65535, 65529, 1441803, 65535, 65530, 655371, 65535, 65531, 1048591, 0, 65521, 5, 0, 65522, 1441803, 0, 65523, 1441795, 0, 65524, 1441795, 0, 65525, 1441803, 0, 65526, 12, 0, 65527, 1441803, 0, 65528, 1441803, 0, 65529, 1441803, 0, 65530, 655371, 0, 65531, 1048591, 1, 65521, 5, 1, 65522, 1441803, 1, 65523, 1441803, 1, 65524, 1441803, 1, 65525, 1441803, 1, 65526, 12, 1, 65527, 1441803, 1, 65528, 1441803, 1, 65529, 1441803, 1, 65530, 1441803, 1, 65531, 1048591, 2, 65521, 5, 2, 65522, 1048588, 2, 65523, 1048588, 2, 65524, 1048588, 2, 65525, 1048588, 2, 65526, 655366, 2, 65527, 1441797, 2, 65528, 1441797, 2, 65529, 1441797, 2, 65530, 1441797, 2, 65531, 1441797, 3, 65521, 5, 3, 65522, 11, 3, 65523, 11, 3, 65524, 11, 3, 65525, 11, 3, 65526, 655365, 3, 65527, 655361, 3, 65528, 655361, 3, 65529, 655361, 3, 65530, 655361, 3, 65531, 655361, 4, 65521, 5, 4, 65522, 11, 4, 65523, 11, 4, 65524, 11, 4, 65525, 11, 4, 65526, 655365, 4, 65527, 655361, 4, 65528, 1441792, 4, 65529, 1048578, 4, 65530, 1048578, 4, 65531, 1048578, 65521, 65532, 1048581, 65521, 65533, 1048581, 65521, 65534, 1048581, 65521, 65535, 1048581, 65521, 0, 1048581, 65521, 1, 1048581, 65521, 2, 1048581, 65521, 3, 1048581, 65521, 4, 1048581, 65521, 5, 1048581, 65521, 6, 1048581, 65521, 7, 1048581, 65521, 8, 1048581, 65521, 9, 1048581, 65521, 10, 1048581, 65521, 11, 1048581, 65521, 12, 1048581, 65521, 13, 1048581, 65521, 14, 1048583, 65522, 65532, 12, 65522, 65533, 12, 65522, 65534, 12, 65522, 65535, 12, 65522, 0, 12, 65522, 1, 655372, 65522, 2, 655372, 65522, 3, 655372, 65522, 4, 655372, 65522, 5, 655372, 65522, 6, 655372, 65522, 7, 1441807, 65522, 8, 1048587, 65522, 9, 655372, 65522, 10, 1048587, 65522, 11, 11, 65522, 12, 11, 65522, 13, 1048587, 65522, 14, 655365, 65523, 65532, 1441803, 65523, 65533, 1441803, 65523, 65534, 1441803, 65523, 65535, 1441803, 65523, 0, 1441803, 65523, 1, 1441803, 65523, 2, 1441803, 65523, 3, 1441803, 65523, 4, 1441803, 65523, 5, 1441803, 65523, 6, 1441803, 65523, 7, 1441807, 65523, 8, 1048587, 65523, 9, 655372, 65523, 10, 11, 65523, 11, 3, 65523, 12, 3, 65523, 13, 1048587, 65523, 14, 655365, 65524, 65532, 1441803, 65524, 65533, 1441803, 65524, 65534, 1441803, 65524, 65535, 1441803, 65524, 0, 1441803, 65524, 1, 1441803, 65524, 2, 1441803, 65524, 3, 1441803, 65524, 4, 1441803, 65524, 5, 1441803, 65524, 6, 1441803, 65524, 7, 1441807, 65524, 8, 1048587, 65524, 9, 655372, 65524, 10, 11, 65524, 11, 3, 65524, 12, 3, 65524, 13, 1048587, 65524, 14, 655365, 65525, 65532, 12, 65525, 65533, 12, 65525, 65534, 12, 65525, 65535, 12, 65525, 0, 12, 65525, 1, 655372, 65525, 2, 655372, 65525, 3, 655372, 65525, 4, 655372, 65525, 5, 655372, 65525, 6, 655372, 65525, 7, 1441807, 65525, 8, 1048587, 65525, 9, 655372, 65525, 10, 11, 65525, 11, 1048587, 65525, 12, 1048587, 65525, 13, 1048587, 65525, 14, 655365, 65526, 65532, 1441797, 65526, 65533, 1441798, 65526, 65534, 1441808, 65526, 65535, 1441810, 65526, 0, 1441810, 65526, 1, 1441808, 65526, 2, 655366, 65526, 3, 1441797, 65526, 4, 1441797, 65526, 5, 1441797, 65526, 6, 1441797, 65526, 7, 1441797, 65526, 8, 1441797, 65526, 9, 1441798, 65526, 10, 1048588, 65526, 11, 1048588, 65526, 12, 1048588, 65526, 13, 1048588, 65526, 14, 655365, 65527, 65532, 1441817, 65527, 65533, 5, 65527, 65534, 11, 65527, 65535, 11, 65527, 0, 11, 65527, 1, 11, 65527, 2, 655365, 65527, 3, 1441817, 65527, 4, 1048604, 65527, 5, 1048603, 65527, 6, 1048603, 65527, 7, 1048602, 65527, 8, 1441817, 65527, 9, 5, 65527, 10, 1048587, 65527, 11, 1048587, 65527, 12, 1048587, 65527, 13, 1048587, 65527, 14, 655365, 65528, 65532, 655388, 65528, 65533, 5, 65528, 65534, 11, 65528, 65535, 11, 65528, 0, 11, 65528, 9, 5, 65528, 10, 1441808, 65528, 11, 1441810, 65528, 12, 1441810, 65528, 13, 1441808, 65528, 14, 655365, 65529, 65532, 655387, 65529, 65533, 5, 65529, 65534, 11, 65529, 65535, 11, 65529, 0, 11, 65529, 13, 1441809, 65529, 14, 655365, 65530, 65532, 655387, 65530, 65533, 5, 65530, 65534, 11, 65530, 65535, 11, 65530, 0, 11, 65530, 1, 11, 65530, 13, 1441809, 65530, 14, 655365, 65531, 65532, 655386, 65531, 65533, 5, 65531, 65534, 15, 65531, 65535, 15, 65531, 0, 15, 65531, 1, 15, 65531, 2, 655365, 65531, 3, 27, 65531, 13, 1441809, 65531, 14, 655365, 5, 65521, 5, 5, 65522, 11, 5, 65523, 11, 5, 65524, 11, 5, 65525, 11, 5, 65526, 655365, 6, 65521, 5, 6, 65522, 11, 6, 65523, 11, 6, 65524, 11, 6, 65525, 11, 6, 65526, 655365, 7, 65521, 5, 7, 65522, 11, 7, 65523, 11, 7, 65524, 11, 7, 65525, 11, 7, 65526, 655365, 8, 65521, 5, 8, 65522, 11, 8, 65523, 11, 8, 65524, 11, 8, 65525, 11, 8, 65526, 655365, 9, 65521, 5, 9, 65522, 1441804, 9, 65523, 1441804, 9, 65524, 1441804, 9, 65525, 1441804, 9, 65526, 1048582, 10, 65521, 5, 10, 65522, 11, 10, 65523, 11, 10, 65524, 11, 10, 65525, 11, 10, 65526, 12, 11, 65521, 5, 11, 65522, 11, 11, 65523, 19, 11, 65524, 655381, 11, 65525, 11, 11, 65526, 12, 12, 65521, 5, 12, 65522, 11, 12, 65523, 21, 12, 65524, 655379, 12, 65525, 11, 12, 65526, 12, 13, 65521, 5, 13, 65522, 11, 13, 65523, 11, 13, 65524, 11, 13, 65525, 11, 13, 65526, 12, 13, 65527, 11, 13, 65528, 11, 13, 65529, 11, 13, 65530, 11, 13, 65531, 11, 13, 65532, 11, 13, 65533, 655372, 13, 65534, 11, 13, 65535, 11, 13, 0, 11, 13, 1, 11, 13, 2, 655365, 13, 3, 1441793, 13, 8, 1048577, 13, 9, 5, 13, 10, 1441803, 13, 11, 1441803, 13, 12, 1441803, 13, 13, 1441803, 13, 14, 655365, 14, 65521, 1441799, 14, 65522, 1441797, 14, 65523, 1441797, 14, 65524, 1441797, 14, 65525, 1441797, 14, 65526, 1441797, 14, 65527, 1441797, 14, 65528, 1441797, 14, 65529, 1441797, 14, 65530, 1441797, 14, 65531, 1441797, 14, 65532, 1441797, 14, 65533, 1441797, 14, 65534, 1441797, 14, 65535, 1441797, 14, 0, 1441797, 14, 1, 1441797, 14, 2, 655367, 14, 3, 1441793, 14, 8, 1048577, 14, 9, 1441799, 14, 10, 1441797, 14, 11, 1441797, 14, 12, 1441797, 14, 13, 1441797, 14, 14, 655367, 4, 65532, 1441792, 4, 65533, 655361, 4, 65534, 655361, 4, 65535, 655361, 4, 0, 655361, 4, 1, 655361, 4, 2, 655361, 65532, 13, 1441809, 65532, 14, 655365, 65533, 13, 1441809, 65533, 14, 655365, 65534, 13, 1441809, 65534, 14, 655365, 65535, 13, 1441809, 65535, 14, 655365, 0, 13, 1441809, 0, 14, 655365, 1, 13, 1441809, 1, 14, 655365, 2, 13, 1441809, 2, 14, 655365, 3, 13, 1441809, 3, 14, 655365, 4, 13, 1441809, 4, 14, 655365, 16, 65519, 1441792, 65519, 16, 1441792, 65519, 65519, 1441792, 65519, 65520, 1048578, 65519, 65521, 1048578, 65519, 65528, 1048578, 65519, 65529, 1048578, 65519, 65530, 1048578, 65519, 65531, 1048578, 65519, 65532, 1048578, 65519, 65533, 1048578, 65519, 65534, 1048578, 65519, 65535, 1048578, 65519, 0, 1048578, 65519, 1, 1048578, 65519, 2, 1048578, 65519, 3, 1048578, 65519, 4, 1048578, 65519, 5, 1048578, 65519, 6, 1048578, 65519, 7, 1048578, 65519, 8, 1048578, 65519, 9, 1048578, 65519, 10, 1048578, 65519, 11, 1048578, 65519, 12, 1048578, 65519, 13, 1048578, 65519, 14, 1048578, 65519, 15, 1048578, 16, 65520, 1441794, 16, 65521, 1441794, 16, 65522, 1441794, 16, 65523, 1441794, 16, 65524, 1441794, 16, 65525, 1441794, 16, 65526, 1441794, 16, 65527, 1441794, 16, 65528, 1441794, 16, 65529, 1441794, 16, 65530, 1441794, 16, 65531, 1441794, 16, 65532, 1441794, 16, 65533, 1441794, 16, 65534, 1441794, 16, 65535, 1441794, 16, 0, 1441794, 16, 1, 1441794, 16, 2, 1441794, 16, 3, 1441794, 16, 8, 1441794, 16, 9, 1441794, 65520, 65519, 2, 65521, 65519, 2, 65522, 65519, 2, 65523, 65519, 2, 65524, 65519, 2, 65525, 65519, 2, 65526, 65519, 2, 65527, 65519, 2, 65528, 65519, 1441792, 65531, 65519, 1441792, 65532, 65519, 2, 65533, 65519, 2, 65534, 65519, 2, 65535, 65519, 2, 0, 65519, 2, 1, 65519, 2, 2, 65519, 2, 3, 65519, 2, 4, 65519, 2, 5, 65519, 2, 6, 65519, 2, 7, 65519, 2, 8, 65519, 2, 9, 65519, 2, 10, 65519, 2, 11, 65519, 2, 12, 65519, 2, 13, 65519, 2, 14, 65519, 2, 15, 65519, 2, 65520, 16, 655362, 65521, 16, 655362, 65522, 16, 655362, 65523, 16, 655362, 65524, 16, 655362, 65525, 16, 655362, 65526, 16, 655362, 65527, 16, 655362, 65528, 16, 655362, 65529, 16, 655362, 65530, 16, 655362, 65531, 16, 655362, 65532, 16, 655362, 65533, 16, 655362, 65534, 16, 655362, 65535, 16, 655362, 0, 16, 655362, 1, 16, 655362, 2, 16, 655362, 3, 16, 655362, 4, 16, 655362, 5, 16, 655362, 6, 16, 655362, 7, 16, 655362, 8, 16, 655362, 9, 16, 655362, 10, 16, 655362, 11, 16, 655362, 12, 16, 655362, 13, 16, 655362, 14, 16, 655362, 15, 16, 655362, 65528, 8, 655388, 65529, 8, 655387, 65528, 1, 11, 65529, 1, 11, 65528, 2, 655365, 65530, 2, 655365, 65529, 2, 655365, 65528, 5, 1441794, 65528, 6, 1441794, 65528, 4, 1441792, 65528, 3, 26, 65530, 3, 27, 65529, 3, 27, 65530, 4, 655362, 65529, 4, 655362, 65528, 7, 1441792, 65529, 7, 2, 65530, 7, 2, 65531, 7, 2, 65532, 7, 2, 65533, 7, 2, 65534, 7, 2, 65535, 7, 2, 4, 3, 27, 5, 3, 27, 0, 7, 2, 1, 7, 1441792, 2, 7, 2, 3, 7, 2, 4, 7, 2, 5, 7, 2, 6, 7, 2, 7, 7, 2, 8, 7, 2, 9, 7, 1441792, 10, 7, 655365, 11, 7, 655365, 12, 7, 655365, 13, 7, 655365, 14, 7, 1441792, 15, 7, 655362, 16, 7, 1441792, 0, 4, 655362, 1, 4, 1441792, 2, 4, 655362, 3, 4, 655362, 4, 4, 655362, 5, 4, 655362, 6, 4, 655362, 7, 4, 655362, 8, 4, 655362, 9, 4, 1441792, 10, 4, 5, 11, 4, 5, 12, 4, 5, 13, 4, 5, 14, 4, 1441792, 15, 4, 655362, 16, 4, 1441792, 65519, 65527, 1048578, 65519, 65526, 1048578, 65519, 65525, 1048578, 65519, 65524, 1048578, 65519, 65523, 1048578, 65519, 65522, 1048578, 16, 13, 1441794, 16, 12, 1441794, 16, 11, 1441794, 16, 10, 1441794, 16, 14, 1441794, 16, 16, 1441792, 16, 15, 1441794)
}
script = ExtResource("6_pemhq")
bounce_wall_shape = SubResource("CapsuleShape3D_8s4c3")
other_wall_shape = SubResource("BoxShape3D_mctxq")
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_rpqi1")

[node name="UFOs" parent="." instance=ExtResource("7_7c5wk")]

[node name="Details" type="Node3D" parent="."]

[node name="Sprite3D" type="Sprite3D" parent="Details"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 2.99043, 5)
pixel_size = 0.075
billboard = 2
texture_filter = 0
texture = ExtResource("16_c8v8o")

[node name="Sprite3D6" type="Sprite3D" parent="Details"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 45, 2.99043, 27)
pixel_size = 0.075
billboard = 2
texture_filter = 0
texture = ExtResource("16_c8v8o")

[node name="Sprite3D7" type="Sprite3D" parent="Details"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22, 2.99043, 44)
pixel_size = 0.075
billboard = 2
texture_filter = 0
texture = ExtResource("16_c8v8o")

[node name="Sprite3D2" type="Sprite3D" parent="Details"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 2.99043, -8)
pixel_size = 0.075
billboard = 2
texture_filter = 0
texture = ExtResource("16_c8v8o")

[node name="Sprite3D3" type="Sprite3D" parent="Details"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 2.99043, -28)
pixel_size = 0.075
billboard = 2
texture_filter = 0
texture = ExtResource("16_c8v8o")

[node name="Sprite3D4" type="Sprite3D" parent="Details"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28, 2.99043, -28)
pixel_size = 0.075
billboard = 2
texture_filter = 0
texture = ExtResource("16_c8v8o")

[node name="Sprite3D5" type="Sprite3D" parent="Details"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -42, 2.99043, -44)
pixel_size = 0.075
billboard = 2
texture_filter = 0
texture = ExtResource("16_c8v8o")

[node name="SoundFX" type="Node" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource("8_6u63l")
volume_db = -5.0
autoplay = true
parameters/looping = true

[node name="Jump" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource("11_qmb6t")
volume_db = 0.5

[node name="Spring" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource("12_ypc2k")
volume_db = -3.0

[node name="Bumper" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource("12_25umq")
volume_db = -3.0

[node name="HyperRing" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource("13_25umq")
volume_db = -3.0

[node name="Charge" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource("14_8nqp6")
volume_db = -3.0

[node name="Destroy" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource("14_e0uja")
volume_db = -3.0

[node name="BoostPad" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource("15_53adt")
volume_db = -3.0

[node name="TimeStone" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource("16_oetwe")
volume_db = -3.0

[node name="UFORespawn" type="AudioStreamPlayer" parent="SoundFX"]
stream = ExtResource("17_nvalg")
volume_db = -3.0

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1938.0
offset_bottom = 1085.0
script = ExtResource("19_8nqp6")
